[package]
name = "Cactus"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "2.0.2"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
ctrlc = "3.4.5"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
clap = { version = "4.5.17", features = ["derive"] }
sha2 = "0.10.8"
bytes = "1.9.0"
image = "0.25.5"
base64 = "0.22.1"
[dev-dependencies]
rand = "0.8.5"
tempfile = "3.14.0"
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
embed-bitcode = true

[build]
rustflags = ["-C target-cpu=native"]
